# diff-struct

./: Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: lib.rs
diff-derive/: Cargo.toml
diff-derive/src/: lib.rs
src/: alternate.rs  impls.rs  lib.rs  tests.rs  utils.rs
tests/: arbitrary.rs
