[package]
name = "diff-struct"
description = "A trait for diffing and apply diffs to structs of a certain type"
version = "0.4.2"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
repository = "https://github.com/BenHall-7/diff-struct"
license = "MIT"
edition = "2018"

[lib]
name = "diff"
path = "src/lib.rs"

[dependencies]
diff_derive = { version = "0.2.2" }
num = "0.4.0"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
quickcheck_derive = "0.3"
rand = "0.6"
