[package]
name = "diff-struct"
description = "A trait for diffing and applying diffs to types"
version = "0.5.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
repository = "https://github.com/BenHall-7/diff-struct"
license = "MIT"
edition = "2018"

[lib]
name = "diff"
path = "src/lib.rs"

[features]
default = ["impl_num"]
impl_num = ["num"]

[dependencies]
diff_derive = { version = "0.2.2" }
serde = { version = "1", features = [ "derive" ] }
num = { version = "0.4.0", optional = true }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_derive = "0.3"
quickcheck_macros = "0.8"
rand = "0.6"
